--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ flutter:
   assets:
     - assets/diamond.png
     # TODO: Add slanted menu asset (104)
+    - assets/slanted_menu.png
+    - packages/shrine_images/0-0.jpg
+    # TODO: Add slanted menu asset (104)
     - packages/shrine_images/0-0.jpg
     - packages/shrine_images/1-0.jpg
     - packages/shrine_images/2-0.jpg
